--- a/resources/public/css/minesweeper.css
+++ b/resources/public/css/minesweeper.css
@@ -1,10 +1,11 @@
 .square {
-	width: 45px;
-	height: 45px;
+	width: 36px;
+	height: 36px;
 	text-align: center;
-	line-height: 45px;
+	line-height: 36px;
 	font-weight: bold;
-	font-family: arial;	
+	font-family: arial;
+	font-size: 20px;	
     display: inline-block;
     background-image: url("/images/untouched.png");
 }
