Added hover effect to Hall of Fame. Changed some messages in replay-mode.

--- a/resources/public/css/minesweeper.css
+++ b/resources/public/css/minesweeper.css
@@ -32,6 +32,10 @@
 	display: table-row;
 }
 
+.hof-entry-selected {
+	background-color: #cccccc;
+}
+
 .hof-cell {
 	display: table-cell;
 	margin-left: 10px;
